Stream api compatibility
Signed-off-by: Oleksiy Kokhanyy <oleksiy.kokhanyy@socotra.com>